jQuery を非同期読み込み

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
 
-<script type="text/javascript" src="/common/js/jquery.min.js"></script>
-<script type="text/javascript" src="/common/js/jquery.flatheights.min.js"></script>
+<script type="text/javascript" async src="/common/js/jquery.min.js"></script>
+<script type="text/javascript" async src="/common/js/jquery.flatheights.min.js"></script>
 
 <script>
 jQuery(function() {
