viewpointを全体に設定

--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <title>コンピューター部について | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
