--- a/production/index.html
+++ b/production/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <title>ゲームダウンロード | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
