文化祭情報追加

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ $('#pickup article').flatHeights();
                 <h1>新着情報</h1>
 
                 <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="blog.html#node1">
+                <a href="blog/kaijofes2016.html">
                     <article>
-                        <time><span>2016</span>09.08</time>
-                        <h2>2016年9月17日 文化祭があります！！</h2>
-                        <p>2016年9月17日 文化祭があります！！今年も自作ゲームを展示、配布します。</p>
+                        <time><span>2016</span>09.12</time>
+                        <h2>2016年9月17,18日 文化祭があります！！</h2>
+                        <p>2016年9月17,18日 文化祭があります！！今年も自作ゲームを展示、配布します。</p>
                     </article>
                 </a>
                 <!-- <a href="blog.html#node1">
