--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ $('#pickup article').flatHeights();
                 <h1>新着情報</h1>
 
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="production/2016/index.html">
+                    <article>
+                        <time><span>2016</span>09.12</time>
+                        <h2>部誌を公開しました</h2>
+                        <p>文化祭で配布する部誌を公開しました。ぜひご覧下さい。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="blog/kaijofes2016.html">
                     <article>
                         <time><span>2016</span>09.12</time>
@@ -65,13 +74,6 @@ $('#pickup article').flatHeights();
                         <p>2016年9月17,18日 文化祭があります！！今年も自作ゲームを展示、配布します。</p>
                     </article>
                 </a>
-                <!-- <a href="blog.html#node1">
-                    <article>
-                        <time><span>2016</span>09.08</time>
-                        <h2>2016年9月17日 文化祭があります！！</h2>
-                        <p>2016年9月17日 文化祭があります！！今年も自作ゲームを展示、配布します。</p>
-                    </article>
-                </a>-->
                 <!-- ↑↑更新履歴ここまで↑↑ -->
 
             </section>
