--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="production/2016/index.html">
                     <article>
+                        <time><span>2016</span>09.16</time>
+                        <h2>自作ゲームを公開しました</h2>
+                        <p>自作ゲームを公開しました。ぜひ遊んでみてください！</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="production/2016/index.html">
+                    <article>
                         <time><span>2016</span>09.12</time>
                         <h2>部誌を公開しました</h2>
                         <p>文化祭で配布する部誌を公開しました。ぜひご覧下さい。</p>
