HPをsiteに変更 gitの仮ページ作成 site/settingは書きかけ

--- a/documents/index.html
+++ b/documents/index.html
@@ -12,11 +12,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-<title>HPの管理 | 海城コンピューター部活動記</title>
+<title>資料 | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<meta name="Keywords" content="">
-<meta name="Description" content="HPの管理">
+<meta name="Keywords" content="海城,コンピュータ部">
+<meta name="Description" content="資料">
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
@@ -55,30 +55,21 @@ $('#pickup article').flatHeights();
         <div id="contents">
            <ul class="syncer-brcb">
            <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
-           <li><a href="/documents/index.html" itemprop="url"><span itemprop="title">資料</span></a></li>
-           <li><span itemprop="title">HPの管理</span></li>
+           <li><span itemprop="title">資料</span></li>
            </ul>
            <br><hr>
 
             <section id="information">
-                <h1>HPの管理</h1>
+                <h1>資料</h1>
 
-                <a href="../git/">
+                <a href="site/index.html">
                     <article>
                         <time></time>
-                        <h2>git導入編</h2>
-                        <p>バージョン管理システム、gitを導入しましょう。</p>
-                    </article>
-                </a>
-                <a href="setting.html">
-                    <article>
-                        <time></time>
-                        <h2>初期設定編</h2>
-                        <p>HPのレポジトリをクローンしましょう。</p>
+                        <h2>サイトの管理</h2>
+                        <p>このサイトの管理についてです。身内向け。</p>
                     </article>
                 </a>
             </section>
-            <br>身内向けだから見た目が悪いのは勘弁...。
 
         </div>
 
