--- a/documents/site/setting.html
+++ b/documents/site/setting.html
@@ -55,27 +55,28 @@ $('#pickup article').flatHeights();
         <div id="contents">
            <ul class="syncer-brcb">
            <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
-           <li><span itemprop="title">作品</span></li>
+           <li><a href="/documents/index.html" itemprop="url"><span itemprop="title">資料</span></a></li>
+           <li><a href="/documents/site/index.html" itemprop="url"><span itemprop="title">サイトの管理</span></a></li>
+           <li><span itemprop="title">初期設定編</span></li>
            </ul>
            <br><hr>
 
-            <!-- ↓コンテンツここから↓ -->
-            <section id="pickup">
-                <h1>制作物</h1>
-
-                <!-- ↓↓オススメコンテンツ1ここから↓↓ -->
-                <a href="2016/index.html">
-                    <article>
-                        <img src="2016/img/Launcher.png" alt="2016文化祭展示ゲーム" width="300" height="225">
-                        <h2>2016文化祭展示ゲーム</h2>
-                        <p>2016年度文化祭に展示したゲームがダウンロードできます</p>
-                    </article>
-                </a>
-                <!-- ↑↑オススメコンテンツ1ここまで↑↑ -->
-
-            </section>
-            <!-- ↑コンテンツここまで↑ -->
-
+            このサイトの管理方法です。身内向けだから見た目が悪いのは勘弁...。<br><br><br>
+            まず、sourcetreeやgithubアカウントはあるものとします。<br>
+            githubのKaijoComputerClubに所属していない場合は入れてもらってください。<br>
+            既に所属している人が<a href="https://github.com/KaijoComputer">組織のアカウントのページ</a>にアクセスして、Peopleのinvite someoneから招待すれば良いです。<br>
+            これで直接編集の権限を得たので、クローンします。<br>
+           <a href="https://github.com/KaijoComputer/KaijoComputer.github.io"> githubのプロジェクトページ</a><br>
+            にアクセスして、clone or downloadをクリック<br>
+            アドレスをコピー<br>
+            sourcetreeの新規/クローンを作成=>レポジトリをクローンから<br>
+            元のパス/URLにコピーしたアドレスを貼り付け<br>
+            保存先のパスは適当で良いです<br>
+            でクローン<br>
+            保存したフォルダのプロパティを開いて、共有する<br>
+            共有する相手...のはそのままで良い<br>
+            共有したフォルダを適当なドライブに割り当てる(「エクスプローラでPCを右クリックして、ネットワークドライブの割り当て」でできる)<br>
+            (ルートパスを使っているので、保存フォルダがドライブの直下にある必要があります)<br>
         </div>
 
         <script src="/navigation.js"></script>
