トップページ更新

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴の見出し↓↓ -->
                 <h1>新着情報</h1>
 
+                <!-- 3個までにすること -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="blog/3_kaijofes2016-result.html">
+                    <article>
+                        <time><span>2016</span>10.14</time>
+                        <h2>海城祭が開催されました</h2>
+                        <p>遅れましたが、海城祭の報告です。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="production/2016/index.html">
                     <article>
@@ -81,15 +91,6 @@ $('#pickup article').flatHeights();
                         <time><span>2016</span>09.12</time>
                         <h2>部誌を公開しました</h2>
                         <p>文化祭で配布する部誌を公開しました。ぜひご覧下さい。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="blog/kaijofes2016.html">
-                    <article>
-                        <time><span>2016</span>09.12</time>
-                        <h2>2016年9月17,18日 文化祭があります！！</h2>
-                        <p>2016年9月17,18日 文化祭があります！！今年も自作ゲームを展示、配布します。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
