--- a/documents/site/setting.html
+++ b/documents/site/setting.html
@@ -32,13 +32,6 @@ $('#pickup article').flatHeights();
 <!--[if lt IE 9]>
 <script src="common/js/html5shiv.js"></script>
 <![endif]-->
-<style>
-#button_center{
-    width: 340px;
-    margin-left: auto;
-    margin-right: auto;
-}
-</style>
 
 <body id="top">
     <div id="wrapper">
@@ -61,6 +54,8 @@ $('#pickup article').flatHeights();
            </ul>
            <br><hr>
 
+            <section id="pickup">
+            <h1>サイトの管理-初期設定編</h1>
             このサイトの管理方法です。身内向けだから見た目が悪いのは勘弁...。<br><br><br>
             まず、sourcetreeやgithubアカウントはあるものとします。<br>
             githubのKaijoComputerClubに所属していない場合は入れてもらってください。<br>
@@ -77,6 +72,8 @@ $('#pickup article').flatHeights();
             共有する相手...のはそのままで良い<br>
             共有したフォルダを適当なドライブに割り当てる(「エクスプローラでPCを右クリックして、ネットワークドライブの割り当て」でできる)<br>
             (ルートパスを使っているので、保存フォルダがドライブの直下にある必要があります)<br>
+
+           </section>
         </div>
 
         <script src="/navigation.js"></script>
