プッシュテストもかねてすごーくマイナーな修正 なんか単 語の間の改 行が目立ったのでそこらへんを直しました。あと文章も少しだけ水増ししました。

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ $('#pickup article').flatHeights();
                 <img src="img/main.png" alt="部室" width="500" height="275">
                 <!-- ↓管理人のコメント↓ -->
                 <p>
-                    海城コンピューター部の公式ホームページです。<br><br>
-                    文化祭で展示したゲームの配布、大会での成績の公表、その他普段の活動の公開などを行っています。
+                    海城コンピューター部の<br>公式ホームページです。<br><br>
+                    文化祭で展示したゲームの<br>配布、大会での成績の公表<br>その他に普段の活動の公開などを行っています。
                 </p>
             </div>
 
