文章が窮屈だったので微調整

--- a/performance/index.html
+++ b/performance/index.html
@@ -92,10 +92,10 @@ color: #666;
                 <h1>海城コンピューター部の競技プログラミング成績</h1>
                 
                 海城コンピューター部のプログラム班は、年一回開催される学生を対象にした<br>
-                日本情報オリンピック(JOI)に向けて日々修行を積んでいます。<br>
+                日本情報オリンピック(JOI)に向けて日々修行を積んでいます。<br><br>
                 普段はプログラム班はAtCoderやCodeforcesなどの<br>
                 インターネット上のコンテストに参加しており、<br>
-                不定期の勉強会も有志で開いています。<br>
+                不定期の勉強会も有志で開いています。<br><br>
                 このページでは、部員の普段の大会参加成績を匿名で公表しています。<br>
                 上の成績ほど新しい大会のものです。<br>
                 
