トップに更新情報追加 #3 プログラミング班のページ作成 競プロ成績をプログラミング班のページに移動

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ $('#pickup article').flatHeights();
 
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="blog/programming/performance.html">
+                    <article>
+                        <time><span>2016</span>10.15</time>
+                        <h2>競技プログラミング大会成績</h2>
+                        <p>10/15のARC,ABCの大会参加成績を公表しました。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="blog/3_kaijofes2016-result.html">
                     <article>
                         <time><span>2016</span>10.14</time>
@@ -82,15 +91,6 @@ $('#pickup article').flatHeights();
                         <time><span>2016</span>09.16</time>
                         <h2>自作ゲームを公開しました</h2>
                         <p>自作ゲームを公開しました。ぜひ遊んでみてください！</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="production/2016/index.html">
-                    <article>
-                        <time><span>2016</span>09.12</time>
-                        <h2>部誌を公開しました</h2>
-                        <p>文化祭で配布する部誌を公開しました。ぜひご覧下さい。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
