管理者権限が必要という記述を追加

--- a/documents/site/setting.html
+++ b/documents/site/setting.html
@@ -59,7 +59,7 @@ $('#pickup article').flatHeights();
             このサイトの管理方法です。身内向けだから見た目が悪いのは勘弁...。<br><br><br>
             まず、sourcetreeやgithubアカウントはあるものとします。<br>
             githubのKaijoComputerClubに所属していない場合は入れてもらってください。<br>
-            既に所属している人が<a href="https://github.com/KaijoComputer">組織のアカウントのページ</a>にアクセスして、Peopleのinvite someoneから招待すれば良いです。<br>
+            既に所属して、Owner権限持ってる人が<a href="https://github.com/KaijoComputer">組織のアカウントのページ</a>にアクセスして、Peopleのinvite someoneから招待すれば良いです。<br>
             これで直接編集の権限を得たので、クローンします。<br>
            <a href="https://github.com/KaijoComputer/KaijoComputer.github.io"> githubのプロジェクトページ</a><br>
             にアクセスして、clone or downloadをクリック<br>
