--- a/performance/index.html
+++ b/performance/index.html
@@ -103,11 +103,12 @@ color: #666;
 
                 <!--
                     成績のテーブルはここだよ！
-                    <tr><td>大会名</td><td>？点、？点…</td></tr>
+                    <tr><td>日付</td><td>大会名</td><td>？点、？点…</td></tr>
                     みたいに「先頭に」追加していってください
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績（降順）</th></tr>
+                    <tr><td>2016/10/16</td><td>Codeforces Round #731 (Div.2)</td><td>2172点、1300点、424点</td></tr>
                     <tr><td>2016/10/15</td><td>AtCoder Regular Contest 062</td><td>600点、600点</td></tr>
                     <tr><td>2016/10/15</td><td>AtCoder Beginner Contest 046</td><td>300点</td></tr>
                 </table>
