新着情報を更新

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
+                        <time><span>2016</span>10.16</time>
+                        <h2>競技プログラミング大会成績</h2>
+                        <p>10/16のCodeforcesの大会参加成績を公表しました。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="performance/index.html">
+                    <article>
                         <time><span>2016</span>10.15</time>
                         <h2>競技プログラミング大会成績</h2>
                         <p>10/15のARC,ABCの大会参加成績を公表しました。</p>
@@ -82,15 +91,6 @@ $('#pickup article').flatHeights();
                         <time><span>2016</span>10.14</time>
                         <h2>海城祭が開催されました</h2>
                         <p>遅れましたが、海城祭の報告です。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="production/2016/index.html">
-                    <article>
-                        <time><span>2016</span>09.16</time>
-                        <h2>自作ゲームを公開しました</h2>
-                        <p>自作ゲームを公開しました。ぜひ遊んでみてください！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
