performance以下作業完了

--- a/performance/index.html
+++ b/performance/index.html
@@ -21,6 +21,7 @@
 
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
+<link rel="stylesheet" href="/designfile/performance/index.css" type="text/css">
 
 <script type="text/javascript" src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" src="/common/js/jquery.flatheights.min.js"></script>
@@ -33,40 +34,6 @@ $('#pickup article').flatHeights();
 <!--[if lt IE 9]>
 <script src="common/js/html5shiv.js"></script>
 <![endif]-->
-<style type="text/css">
-<!--
-table.table_a {
-border: 2px #808080 solid;
-border-collapse:collapse;
-width: 500px;
-}
-table.table_a th,td
-{
-border: 1px #808080 solid;
-padding: 2px 4px;
-}
-table.table_a th {
-text-align: center;
-font-size: 18px;
-font-weight: bold;
-color: #ED760A;
-}
-table.table_a th.h1 {
-width:20%
-}
-table.table_a th.h2 {
-width:50%
-}
-table.table_a th.h3 {
-width:30%
-}
-table.table_a td {
-text-align:left;
-font-size:12px;
-color: #666;
-}
-//-->
-</style>
 <body id="top">
     <div id="wrapper">
         <noscript>
