CODE FESTIVAL 2016 qual Cの成績追加

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2016</span>10.23</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>10/23のCodeforces Canada Cup 2016の大会参加成績を公表しました。</p>
+                        <p>10/23のCODE FESTIVAL 2016 qual Cの大会参加成績を追加しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
