--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2016</span>10.29</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>10/29のAGC006の大会参加成績を公表しました。</p>
+                        <p>10/30のCodeforcesの大会参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
