--- a/performance/index.html
+++ b/performance/index.html
@@ -74,11 +74,12 @@ $('#pickup article').flatHeights();
                     みたいに「先頭に」追加していってください
                 -->
                 <table class="table_a">
-                    <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績（降順）</th></tr>
+                    <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2016/10/30</td><td>Codeforces Round #378 (Div.2)</td><td>2822点</td></tr>
                     <tr><td>2016/10/29</td><td>AtCoder Grand Contest 006</td><td>600点</td></tr>
                     <tr><td>2016/10/23</td><td>CODE FESTIVAL 2016 qual C</td><td>700点、700点、300点</td></tr>
                     <tr><td>2016/10/23</td><td>Codeforces Canada Cup 2016</td><td>2436点</td></tr>
-                    <tr><td>2016/10/16</td><td>Codeforces Round #731 (Div.2)</td><td>2172点、1300点、424点</td></tr>
+                    <tr><td>2016/10/16</td><td>Codeforces Round #376 (Div.2)</td><td>2172点、1300点、424点</td></tr>
                     <tr><td>2016/10/15</td><td>AtCoder Regular Contest 062</td><td>600点、600点</td></tr>
                     <tr><td>2016/10/15</td><td>AtCoder Beginner Contest 046</td><td>300点</td></tr>
                 </table>
