--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2016</span>10.29</time>
+                        <time><span>2016</span>11.06</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>10/30のCodeforcesの大会参加成績を公表しました。</p>
+                        <p>11/6のAtCoderの大会参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
