--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2016/11/12</td><td>AtCoder Grand Contest 007</td><td>200点、200点、1200点</td></tr>
                     <tr><td>2016/11/06</td><td>AtCoder Regular Contest 063</td><td>700点</td></tr>
                     <tr><td>2016/11/06</td><td>AtCoder Beginner Contest 047</td><td>1000点、600点</td></tr>
                     <tr><td>2016/10/30</td><td>Codeforces Round #378 (Div.2)</td><td>2822点</td></tr>
