トップページ大会成績追加のお知らせの文言を少し修正

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2016</span>11.27</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>11/27のAtCoderで行われた大会の参加成績を公表しました。</p>
+                        <p>11/27にAtCoderで行われた大会の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
