--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ $('#pickup article').flatHeights();
 
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="blog/4_prog_training.html">
+                    <article>
+                        <time><span>2016</span>11.30</time>
+                        <h2>競技プログラミング勉強会</h2>
+                        <p>JOI予選に向けて行った競技プログラミングの勉強会についての報告です。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
                         <time><span>2016</span>11.28</time>
@@ -82,15 +91,6 @@ $('#pickup article').flatHeights();
                         <time><span>2016</span>10.14</time>
                         <h2>海城祭が開催されました</h2>
                         <p>遅れましたが、海城祭の報告です。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="production/2016/index.html">
-                    <article>
-                    <time><span>2016</span>09.16</time>
-                    <h2>自作ゲームを公開しました</h2>
-                    <p>自作ゲームを公開しました。ぜひ遊んでみてください！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
