サイト編集更新：サイトマップ編

--- a/documents/site/PageSpeed.html
+++ b/documents/site/PageSpeed.html
@@ -15,7 +15,7 @@
 <title>サイトの管理-パフォーマンス改善編 | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<meta name="Keywords" content="github">
+<meta name="Keywords" content="パフォーマンス,サイト">
 <meta name="Description" content="サイトの管理-パフォーマンス改善編">
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
