index更新し忘れ

--- a/documents/site/index.html
+++ b/documents/site/index.html
@@ -77,6 +77,13 @@ $('#pickup article').flatHeights();
                         <p>サイトのパフォーマンスを改善しよう。</p>
                     </article>
                 </a>
+                <a href="SEO_sitemap.html">
+                    <article>
+                        <time></time>
+                        <h2>サイトマップ編</h2>
+                        <p>サイトマップで検索の上位に来るようにしよう。</p>
+                    </article>
+                </a>
             </section>
             <br>身内向けだから見た目が悪いのは勘弁...。
 
