--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="/common/css/profile.css" type="text/css">
 
 <script src="/common/js/jquery.min.js"></script>
-<script src="/common/js/common.js"></script>
+<script src="/common/js/common.min.js"></script>
 <!--[if lt IE 9]>
 <script src="/common/js/html5shiv.js"></script>
 <![endif]-->
