--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,8 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2016/12/04</td><td>AtCoder Regular Contest 065</td><td>700点、300点</td></tr>
+                    <tr><td>2016/12/04</td><td>AtCoder Beginner Contest 049</td><td>600点</td></tr>
                     <tr><td>2016/12/04</td><td>AtCoder Regular Contest 064</td><td>1400点、1400点</td></tr>
                     <tr><td>2016/12/04</td><td>AtCoder Beginner Contest 048</td><td>300点、300点</td></tr>
                     <tr><td>2016/11/28</td><td>CODE FESTIVAL 2016 Grand Final(Parallel)</td><td>500点</td></tr>
