--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2016/12/11</td><td>第16回日本情報オリンピック 予選</td><td>500点、500点、300点、300点</td></tr>
                     <tr><td>2016/11/28</td><td>CODE FESTIVAL 2016 Grand Final(Parallel)</td><td>500点</td></tr>
                     <tr><td>2016/11/27</td><td>CODE FESTIVAL 2016 Relay (Parallel)</td><td>200点</td></tr>
                     <tr><td>2016/11/27</td><td>CODE FESTIVAL 2016 Elimination Tournament Round 2 (Parallel)</td><td>200点</td></tr>
