--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2016</span>11.28</time>
+                        <time><span>2016</span>12.15</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>11/28にAtCoderで行われた大会の参加成績を公表しました。</p>
+                        <p>12/11に行われたJOI 2016/2017の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
