ABC050/ARC066の大会成績追加

--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,8 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2016/12/18</td><td>AtCoder Regular Contest 066</td><td>300点、300点</td></tr>
+                    <tr><td>2016/12/18</td><td>AtCoder Beginner Contest 050</td><td>600点、300点</td></tr>
                     <tr><td>2016/12/17</td><td>第3回 ドワンゴからの挑戦状 予選</td><td>800点、800点、100点、100点</td></tr>
                     <tr><td>2016/12/11</td><td>第16回日本情報オリンピック 予選</td><td>500点、500点、320点<br>300点、300点、300点<br>300点、100点</td></tr>
                     <tr><td>2016/12/04</td><td>AtCoder Regular Contest 065</td><td>700点、300点</td></tr>
