--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2016</span>12.19</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>12/18にAtCoderで行われた大会の参加成績を公表しました。</p>
+                        <p>12/19にCodeforcesで行われた大会の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
