--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@ $('#pickup article').flatHeights();
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="blog/5_JOI_20162017_yo.html">
+                    <article>
+                        <time><span>2016</span>12.19</time>
+                        <h2>第16回日本情報オリンピック予選報告</h2>
+                        <p>第16回日本情報オリンピック予選の結果報告です。facebookとほぼ同じです。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="blog/4_prog_training.html">
                     <article>
                         <time><span>2016</span>11.30</time>
                         <h2>競技プログラミング勉強会</h2>
                         <p>JOI予選に向けて行った競技プログラミングの勉強会についての報告です。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="blog/3_kaijofes2016-result.html">
-                    <article>
-                        <time><span>2016</span>10.14</time>
-                        <h2>海城祭が開催されました</h2>
-                        <p>遅れましたが、海城祭の報告です。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
