--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2016</span>12.19</time>
+                        <time><span>2016</span>12.24</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>12/19にCodeforcesで行われた大会の参加成績を公表しました。</p>
+                        <p>12/24にAtCoderで行われたXmas Contest 2016 夜の部の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
