--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/01/09</td><td>AtCoder Beginner Contest 051</td><td>600点、600点</td></tr>
                     <tr><td>2016/12/24</td><td>Xmas Contest 2016 夜の部</td><td>172点</td></tr>
                     <tr><td>2016/12/19</td><td>Codeforces Round #387 (Div.2)</td><td>5048点</td></tr>
                     <tr><td>2016/12/18</td><td>AtCoder Regular Contest 066</td><td>300点、300点</td></tr>
