1/15のABC/ARCの成績追加

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>1.9</time>
+                        <time><span>2017</span>1.16</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>1/7に行われたAtCoder Beginner Contest 051の参加成績を公表しました。</p>
+                        <p>1/16に行われたAtCoder Beginner/Regular Contestの参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
