--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>1.23</time>
+                        <time><span>2017</span>1.29</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>1/21,1/22に行われた日露学生プログラミングコンテスト,AGC009の参加成績を公表しました。</p>
+                        <p>1/29に行われたARC068/ABC053の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
