performance/index.html コメント修正
・順位を公表するようにしたので、table上部のコメントも順位に変更

--- a/performance/index.html
+++ b/performance/index.html
@@ -70,7 +70,7 @@ $('#pickup article').flatHeights();
 
                 <!--
                     成績のテーブルはここだよ！
-                    <tr><td>日付</td><td>大会名</td><td>？点、？点…</td></tr>
+                    <tr><td>日付</td><td>大会名</td><td>？位、？位…</td></tr>
                     みたいに「先頭に」追加していってください
                 -->
                 <table class="table_a">
