NJPC2017の大会成績追加
・index.html 新着情報変更
・performance/index.html のtableに追加

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2017</span>1.29</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>1/29に行われたARC068/ABC053の参加成績を公表しました。</p>
+                        <p>1/28に行われたARC068/ABC053、1/29に行われたNJPC2017の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
