--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2017</span>1.23</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>1/21,1/22に行われた日露学生プログラミングコンテスト,AGC009の参加成績を公表しました。</p>
+                        <p>2/4に行われたAtCoder Grand Contest 010の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
