--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/01/22</td><td><a href="http://agc010.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 010</a></td><td>205位、240位、787位</td></tr>
                     <tr><td>2017/01/22</td><td>AtCoder Grand Contest 009</td><td>526位、527位</td></tr>
                     <tr><td>2017/01/21</td><td>Japan Russia Exchange Programming Contest 2017</td><td>39位、49位</td></tr>
                     <tr><td>2017/01/15</td><td>AtCoder Regular Contest 067</td><td>1400点</td></tr>
