第16回日本情報オリンピック 本選の大会成績追加

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>2.4</time>
+                        <time><span>2017</span>2.12</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>2/4に行われたAtCoder Grand Contest 010の参加成績を公表しました。</p>
+                        <p>2/12に行われた第16回日本情報オリンピック本選の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
