--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,8 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/02/18</td><td><a href="http://arc069.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 069</a></td><td>81位、376位</td></tr>
+                    <tr><td>2017/02/18</td><td><a href="http://abc055.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 055</a></td><td>83位</td></tr>
                     <tr><td>2017/02/12</td><td>第16回日本情報オリンピック 本選</td><td>118点、118点</td>></tr>
                     <tr><td>2017/02/11</td><td><a href="http://abc054.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 054</a></td><td>299位、341位</td></tr>
                     <tr><td>2017/02/04</td><td><a href="http://agc010.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 010</a></td><td>205位、240位、787位</td></tr>
