Mujin Programming Challenge 2017

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $('#pickup article').flatHeights();
                     <article>
                         <time><span>2017</span>2.19</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>2/18に行われたARC069/ABC055の参加成績を公表しました。</p>
+                        <p>2/25に行われたMujin Programming Challenge 2017の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
