--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>2.25</time>
+                        <time><span>2017</span>3.10</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>2/25に行われたMujin Programming Challenge 2017の参加成績を公表しました。</p>
+                        <p>3/5に行われた「みんなのプロコン」の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
