--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/03/12</td><td><a href="http://agc011.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 011</a></td><td>280位、296位、596位</td></tr>
                     <tr><td>2017/03/05</td><td><a href="http://yahoo-procon2017-qual.contest.atcoder.jp/" itemprop="url">みんなのプロコン</a></td><td>114位、154位、321位</td></tr>
                     <tr><td>2017/02/25</td><td><a href="http://mujin-pc-2017.contest.atcoder.jp/" itemprop="url">Mujin Programming Challenge 2017</a></td><td>227位、283位、422位</td></tr>
                     <tr><td>2017/02/18</td><td><a href="http://arc069.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 069</a></td><td>81位、376位</td></tr>
