間違って入っていた文字を削除

--- a/performance/index.html
+++ b/performance/index.html
@@ -80,7 +80,7 @@ $('#pickup article').flatHeights();
                     <tr><td>2017/02/25</td><td><a href="http://mujin-pc-2017.contest.atcoder.jp/" itemprop="url">Mujin Programming Challenge 2017</a></td><td>227位、283位、422位</td></tr>
                     <tr><td>2017/02/18</td><td><a href="http://arc069.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 069</a></td><td>81位、376位</td></tr>
                     <tr><td>2017/02/18</td><td><a href="http://abc055.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 055</a></td><td>83位</td></tr>
-                    <tr><td>2017/02/12</td><td>第16回日本情報オリンピック 本選</td><td>118点、118点</td>></tr>
+                    <tr><td>2017/02/12</td><td>第16回日本情報オリンピック 本選</td><td>118点、118点</td></tr>
                     <tr><td>2017/02/11</td><td><a href="http://abc054.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 054</a></td><td>299位、341位</td></tr>
                     <tr><td>2017/02/04</td><td><a href="http://agc010.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 010</a></td><td>205位、240位、787位</td></tr>
                     <tr><td>2017/01/29</td><td>NJPC2017</td><td>98位、133位、138位、147位</td></tr>
