--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/04/09</td><td><a href="http://arc071.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 071</a></td><td>50位、139位、387位</td></tr>
                     <tr><td>2017/03/18</td><td><a href="http://arc070.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 070</a></td><td>178位、266位</td></tr>
                     <tr><td>2017/03/18</td><td><a href="http://abc056.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 056</a></td><td>48位</td></tr>
                     <tr><td>2017/03/12</td><td><a href="http://agc011.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 011</a></td><td>280位、296位、596位</td></tr>
