--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>4.9</time>
+                        <time><span>2017</span>4.16</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>4/8に行われたARC071の参加成績を公表しました。</p>
+                        <p>4/15に行われたAGC013の参加成績を公表しました。今回はなんと世界の強い人たちと競って28位という超好成績です！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
