JOIパンフを追加

--- a/documents/competitive_programming/index.html
+++ b/documents/competitive_programming/index.html
@@ -12,11 +12,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-<title>資料 | 海城コンピューター部活動記</title>
+<title>競技プログラミング | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<meta name="Keywords" content="海城,コンピュータ部">
-<meta name="Description" content="資料">
+<meta name="Keywords" content="">
+<meta name="Description" content="競技プログラミング,競プロ">
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
@@ -48,25 +48,19 @@ $('#pickup article').flatHeights();
         <div id="contents">
            <ul class="syncer-brcb">
            <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
-           <li><span itemprop="title">資料</span></li>
+           <li><a href="/documents/index.html" itemprop="url"><span itemprop="title">資料</span></a></li>
+           <li><span itemprop="title">競技プログラミング</span></li>
            </ul>
            <br><hr>
 
             <section id="information">
-                <h1>資料</h1>
+                <h1>競技プログラミング</h1>
 
-                <a href="site/index.html">
+                <a href="JOIpamphlet2017.html">
                     <article>
                         <time></time>
-                        <h2>サイトの管理</h2>
-                        <p>このサイトの管理についてです。身内向け。</p>
-                    </article>
-                </a>
-                <a href="competitive_programming/index.html">
-                    <article>
-                        <time></time>
-                        <h2>競技プログラミング</h2>
-                        <p>競技プログラミング関係</p>
+                        <h2>情報オリンピック(JOI)布教用チラシ2017</h2>
+                        <p>JOI布教用チラシを一応おいておきます</p>
                     </article>
                 </a>
             </section>
