--- a/documents/competitive_programming/JOIpamphlet2017.html
+++ b/documents/competitive_programming/JOIpamphlet2017.html
@@ -12,11 +12,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
-<title>資料 | 海城コンピューター部活動記</title>
+<title>情報オリンピック(JOI)布教用チラシ2017 | 海城コンピューター部活動記</title>
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
 <meta name="Keywords" content="海城,コンピュータ部">
-<meta name="Description" content="資料">
+<meta name="Description" content="情報オリンピック,JOI,競プロ">
 </head>
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
@@ -48,27 +48,21 @@ $('#pickup article').flatHeights();
         <div id="contents">
            <ul class="syncer-brcb">
            <li><a href="/index.html" itemprop="url"><span itemprop="title">ホーム</span></a></li>
-           <li><span itemprop="title">資料</span></li>
+           <li><a href="/documents/index.html" itemprop="url"><span itemprop="title">資料</span></a></li>
+           <li><a href="/documents/competitive_programming/index.html" itemprop="url"><span itemprop="title">競技プログラミング</span></a></li>
+           <li><span itemprop="title">情報オリンピック(JOI)布教用チラシ2017</span></li>
            </ul>
            <br><hr>
 
             <section id="information">
-                <h1>資料</h1>
-
-                <a href="site/index.html">
-                    <article>
-                        <time></time>
-                        <h2>サイトの管理</h2>
-                        <p>このサイトの管理についてです。身内向け。</p>
-                    </article>
-                </a>
-                <a href="competitive_programming/index.html">
-                    <article>
-                        <time></time>
-                        <h2>競技プログラミング</h2>
-                        <p>競技プログラミング関係</p>
-                    </article>
-                </a>
+                <h1>情報オリンピック(JOI)布教用チラシ2017</h1>
+  
+                <p>学校でプログラミング講習なるものをやっていたので、先生に言って受講生に配らせてもらったチラシです。<br>
+                なので、プログラムが少し書けることを前提に累積和を入れてあります。<br />
+                デザイン能力が無いのでみんなで改善してね（？）<br />
+                （配布の際は1,2ページを表面、3,4ページを裏面として、B4で印刷しました）<br />
+                前に個人のページで公開したものと内容は同じです。<br />
+                <iframe src="https://drive.google.com/file/d/0BwIp-cnuk4RJM0ZJZEJURFB5M2c/preview" width="640" height="768"></iframe></p>
             </section>
 
         </div>
