AGC015 の大会成績追加

--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@ $('#pickup article').flatHeights();
 
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="performance/index.html">
+                    <article>
+                        <time><span>2017</span>06.01</time>
+                        <h2>競技プログラミング大会成績</h2>
+                        <p>5/27に行われたAtCoder Grand Contest 015の参加成績を公表しました。今回は３名の部員が参加しました！</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="documents/competitive_programming/JOIpamphlet2017.html">
                     <article>
                         <time><span>2017</span>05.25</time>
                         <h2>競技プログラミング布教用パンフ</h2>
                         <p>JOIに勧誘するために作ったパンフをこっちでも公開しておきます。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="performance/index.html">
-                    <article>
-                        <time><span>2017</span>5.7</time>
-                        <h2>競技プログラミング大会成績</h2>
-                        <p>5/6に行われたAGC014の参加成績を公表しました。今回は４名の部員が参加しました！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
