--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>06.01</time>
+                        <time><span>2017</span>06.11</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>5/27に行われたAtCoder Grand Contest 015の参加成績を公表しました。今回は３名の部員が参加しました！</p>
+                        <p>6/10に行われたAtCoder Beginner Contest 064の参加成績を公表しました。今回は３名の部員が参加しました！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
