--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/06/10</td><td><a href="http://abc064.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 064</a></td><td>58位、211位、326位</td></tr>
                     <tr><td>2017/05/27</td><td><a href="http://agc015.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 015</a></td><td>62位、120位、638位</td></tr>
                     <tr><td>2017/05/07</td><td><a href="http://agc014.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 014</a></td><td>240位、414位、499位、605位</td></tr>
                     <tr><td>2017/04/15</td><td><a href="http://agc013.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 013</a></td><td>28位、161位、358位</td></tr>
