--- a/documents/competitive_programming/index.html
+++ b/documents/competitive_programming/index.html
@@ -63,6 +63,13 @@ $('#pickup article').flatHeights();
                         <p>JOI布教用チラシを一応おいておきます</p>
                     </article>
                 </a>
+              <a href="VS-guide.html">
+                    <article>
+                        <time></time>
+                        <h2>Visual Studio 2017 導入ガイド</h2>
+                        <p>Visual Studio 2017 の導入ガイド PDF が置いてあります</p>
+                    </article>
+                </a>
             </section>
 
         </div>
