細かい文章修正
「部員の普段の大会参加成績を匿名で公表しています」になってるけど匿名になっていないので直した

--- a/performance/index.html
+++ b/performance/index.html
@@ -63,7 +63,7 @@ $('#pickup article').flatHeights();
                 普段はプログラム班はAtCoderやCodeforcesなどの<br>
                 インターネット上のコンテストに参加しており、<br>
                 不定期の勉強会も有志で開いています。<br><br>
-                このページでは、部員の普段の大会参加成績を匿名で公表しています。<br>
+                このページでは、部員の普段の大会参加成績を公表しています。<br>
                 上の成績ほど新しい大会のものです。<br>
                 
                 <br>
