ARC080 / ABC069 の大会成績追加

--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,8 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/08/06</td><td><a href="http://arc080.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 080</a></td><td>79位、663位</td></tr>
+                    <tr><td>2017/08/06</td><td><a href="http://abc069.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 069</a></td><td>547位</td></tr>
                     <tr><td>2017/06/18</td><td><a href="http://agc016.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 016</a></td><td>219位、637位</td></tr>
                     <tr><td>2017/06/10</td><td><a href="http://abc064.contest.atcoder.jp/" itemprop="url">AtCoder Beginner Contest 064</a></td><td>58位、211位、326位</td></tr>
                     <tr><td>2017/05/27</td><td><a href="http://agc015.contest.atcoder.jp/" itemprop="url">AtCoder Grand Contest 015</a></td><td>62位、120位、638位</td></tr>
