--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>06.21</time>
+                        <time><span>2017</span>08.07</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>6/18に行われたAtCoder Grand Contest 016の参加成績を公表しました。今回は２名の部員が参加しました！</p>
+                        <p>8/6 に行われた AtCoder Regular Contest 080 / Beginner Contest 069 の参加成績を公表しました。今回は３名の部員が参加しました！</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
