--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>08.13</time>
+                        <time><span>2017</span>09.01</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>8/12 に行われた AtCoder Beginner Contest 070 の参加成績を公表しました。今回は２名の部員が参加しました！</p>
+                        <p>8/20 に行われた AtCoder Beginner Contest 070 と8/26 に行われた AtCoder Grand Contest 019 の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
