ARC082 大会成績追加

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>09.01</time>
+                        <time><span>2017</span>09.03</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>8/20 に行われた AtCoder Beginner Contest 070 と8/26 に行われた AtCoder Grand Contest 019 の参加成績を公表しました。</p>
+                        <p>9/2 に行われた AtCoder Regular Contest 082 の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
