--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ $('#pickup article').flatHeights();
 
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="production/2017/index.html">
+                    <article>
+                        <time><span>2017</span>09.15</time>
+                        <h2>第126回海城祭 作品</h2>
+                        <p>第126回海城祭の部の展示に公開したゲーム・ソフトがダウンロードできます</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
                         <time><span>2017</span>09.03</time>
@@ -85,16 +94,6 @@ $('#pickup article').flatHeights();
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="blog/5_JOI_20162017_yo.html">
-                    <article>
-                        <time><span>2016</span>12.19</time>
-                        <h2>第16回日本情報オリンピック予選報告</h2>
-                        <p>第16回日本情報オリンピック予選の結果報告です。facebookとほぼ同じです。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-
             </section>
             <!-- ↑更新履歴sectionここまで↑ -->
 
@@ -104,11 +103,11 @@ $('#pickup article').flatHeights();
                 <h1>オススメコンテンツ</h1>
 
                 <!-- ↓↓オススメコンテンツ1ここから↓↓ -->
-                <a href="production/2016/index.html">
+                <a href="production/2017/index.html">
                     <article>
-                        <img src="production/2016/img/Launcher.png" alt="2016文化祭展示ゲーム" width="300" height="225">
-                        <h2>2016文化祭展示ゲーム</h2>
-                        <p>2016年度文化祭に展示したゲームがダウンロードできます</p>
+                        <img src="production/2017/img/Launcher.png" alt="2017文化祭展示ゲーム" width="300" height="225">
+                        <h2>2017文化祭展示ゲーム</h2>
+                        <p>2017年度文化祭に展示したゲームがダウンロードできます</p>
                     </article>
                 </a>
                 <!-- ↑↑オススメコンテンツ1ここまで↑↑ -->
