--- a/production/index.html
+++ b/production/index.html
@@ -56,24 +56,24 @@ $('#pickup article').flatHeights();
             <section id="pickup">
                 <h1>制作物</h1>
 
-                <!-- ↓↓オススメコンテンツ1ここから↓↓ -->
+                <!-- ↓↓オススメコンテンツここから↓↓ -->
+                <a href="2017/index.html">
+                    <article style="width: 300px;">
+                        <img src="2017/img/Launcher.png" alt="2017文化祭展示ゲーム" width="300" height="225">
+                        <h2>2017文化祭展示ゲーム</h2>
+                        <p>2017年度文化祭に展示したゲームがダウンロードできます</p>
+                    </article>
+                </a>
+                <!-- ↑↑オススメコンテンツここまで↑↑ -->
+                <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="2016/index.html">
-                    <article>
+                    <article style="width: 300px;">
                         <img src="2016/img/Launcher.png" alt="2016文化祭展示ゲーム" width="300" height="225">
                         <h2>2016文化祭展示ゲーム</h2>
                         <p>2016年度文化祭に展示したゲームがダウンロードできます</p>
                     </article>
                 </a>
                 <!-- ↑↑オススメコンテンツ1ここまで↑↑ -->
-                <!-- ↓↓オススメコンテンツ2ここから↓↓ -->
-                <a href="2017/index.html">
-                    <article>
-                        <img src="2017/img/Launcher.png" alt="2017文化祭展示ゲーム" width="300" height="225">
-                        <h2>2017文化祭展示ゲーム</h2>
-                        <p>2017年度文化祭に展示したゲームがダウンロードできます</p>
-                    </article>
-                </a>
-                <!-- ↑↑オススメコンテンツ2ここまで↑↑ -->
             </section>
             <!-- ↑コンテンツここまで↑ -->
 
