PCKの成績へのリンク追加 ブログのindexにJOI布教用パンフが乗っていなかったのを修正 2016のhowtouseが無くなっていたのを修正

--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
   ga('send', 'pageview');
 </script>
 <head>
-<meta charset="UTF-8">
-<meta name=viewport content="width=device-width, initial-scale=1">
-<title>海城コンピューター部活動記</title>
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
-<meta name="Keywords" content="海城,コンピューター,プログラミング,DTM">
-<meta name="Description" content="海城コンピューター部の公式ページです">
+    <meta charset="UTF-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>海城コンピューター部活動記</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon">
+    <meta name="Keywords" content="海城,コンピューター,プログラミング,DTM">
+    <meta name="Description" content="海城コンピューター部の公式ページです">
 </head>
-
 <link rel="stylesheet" href="/common/css/common.min.css" type="text/css">
 <link rel="stylesheet" href="/common/css/index.min.css" type="text/css">
-
 <script type="text/javascript" async src="/common/js/jquery.min.js"></script>
 <script type="text/javascript" async src="/common/js/jquery.flatheights.min.js"></script>
-
 <script>
 jQuery(function() {
 $('#pickup article').flatHeights();
@@ -33,7 +30,6 @@ $('#pickup article').flatHeights();
 <!--[if lt IE 9]>
 <script src="common/js/html5shiv.js"></script>
 <![endif]-->
-
 <body id="top">
     <div id="wrapper">
         <noscript>
@@ -44,13 +40,11 @@ $('#pickup article').flatHeights();
             </p>
         </noscript>
         <script src="/header.js"></script>
-
         <div id="contents">
             <ul class="syncer-brcb">
-	            <li><span itemprop="title">ホーム</span></li>
+                <li><span itemprop="title">ホーム</span></li>
             </ul>
             <br><hr>
-
             <div id="mainImg">
                 <!-- ↓メイン画像↓ -->
                 <img src="img/main.png" alt="部室" width="500" height="275">
@@ -60,13 +54,20 @@ $('#pickup article').flatHeights();
                     文化祭で展示したゲームの<br>配布、大会での成績の公表<br>その他に普段の活動の公開などを行っています。
                 </p>
             </div>
-
             <!-- ↓更新履歴sectionここから↓ -->
             <section id="information">
                 <!-- ↓↓更新履歴の見出し↓↓ -->
                 <h1>新着情報</h1>
-
                 <!-- 3個までにすること -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="https://www.kaijo.ed.jp/students/14588" target="_blank">
+                    <article>
+                        <time><span>2017</span>09.16</time>
+                        <h2>パソコン甲子園 本選出場決定</h2>
+                        <p>9/9に行われたパソコン甲子園2017予選で、本選への出場が決まりました！</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="production/2017/index.html">
                     <article>
@@ -85,23 +86,12 @@ $('#pickup article').flatHeights();
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="documents/competitive_programming/JOIpamphlet2017.html">
-                    <article>
-                        <time><span>2017</span>05.25</time>
-                        <h2>競技プログラミング布教用パンフ</h2>
-                        <p>JOIに勧誘するために作ったパンフをこっちでも公開しておきます。</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
             </section>
             <!-- ↑更新履歴sectionここまで↑ -->
-
             <!-- ↓オススメコンテンツここから↓ -->
             <section id="pickup">
                 <!-- ↓↓オススメコンテンツの見出し↓↓ -->
                 <h1>オススメコンテンツ</h1>
-
                 <!-- ↓↓オススメコンテンツここから↓↓ -->
                 <a href="production/2017/index.html">
                     <article style="width: 300px;">
@@ -120,16 +110,11 @@ $('#pickup article').flatHeights();
                     </article>
                 </a>
                 <!-- ↑↑オススメコンテンツここまで↑↑ -->
-
             </section>
             <!-- ↑オススメコンテンツここまで↑ -->
-
         </div>
-
         <script src="/navigation.js"></script>
-
-    <script src="/footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
-
 </body>
 </html>
