DDCC2017予選の成績追加

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@ $('#pickup article').flatHeights();
                 <h1>新着情報</h1>
                 <!-- 3個までにすること -->
                 <!-- ↓↓更新履歴ここから↓↓ -->
+                <a href="performance/index.html">
+                    <article>
+                        <time><span>2017</span>10.08</time>
+                        <h2>競技プログラミング大会成績</h2>
+                        <p>10/7 に行われた DISCO presents ディスカバリーチャンネル コードコンテスト2017 予選 の参加成績を公表しました。</p>
+                    </article>
+                </a>
+                <!-- ↑↑更新履歴ここまで↑↑ -->
+                <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="https://www.kaijo.ed.jp/students/14588" target="_blank">
                     <article>
                         <time><span>2017</span>09.16</time>
@@ -74,15 +83,6 @@ $('#pickup article').flatHeights();
                         <time><span>2017</span>09.15</time>
                         <h2>第126回海城祭 作品</h2>
                         <p>第126回海城祭の部の展示に公開したゲーム・ソフトがダウンロードできます</p>
-                    </article>
-                </a>
-                <!-- ↑↑更新履歴ここまで↑↑ -->
-                <!-- ↓↓更新履歴ここから↓↓ -->
-                <a href="performance/index.html">
-                    <article>
-                        <time><span>2017</span>09.03</time>
-                        <h2>競技プログラミング大会成績</h2>
-                        <p>9/2 に行われた AtCoder Regular Contest 082 の参加成績を公表しました。</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
