update_perf: CODE FESTIVAL 2017 Final (Parallel) の大会成績追加

--- a/performance/index.html
+++ b/performance/index.html
@@ -75,6 +75,7 @@ $('#pickup article').flatHeights();
                 -->
                 <table class="table_a">
                     <tr><th class="h1">日付</th><th class="h2">大会・コンテスト名</th><th class="h3">成績</th></tr>
+                    <tr><td>2017/11/25</td><td><a href="https://beta.atcoder.jp/contests/cf17-final-open" itemprop="url">CODE FESTIVAL 2017 Final (Parallel)</a></td><td>30位、70位、120位、189位</td></tr>
                     <tr><td>2017/11/19</td><td><a href="https://beta.atcoder.jp/contests/abc079" itemprop="url">AtCoder Beginner Contest 079</a></td><td>42位、75位、152位、355位</td></tr>
                     <tr><td>2017/10/07</td><td><a href="http://arc082.contest.atcoder.jp/" itemprop="url">DISCO presents ディスカバリーチャンネル コードコンテスト2017 予選</a></td><td>13位、73位、771位</td></tr>
                     <tr><td>2017/09/02</td><td><a href="http://arc082.contest.atcoder.jp/" itemprop="url">AtCoder Regular Contest 082</a></td><td>38位、96位、267位</td></tr>
