--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ $('#pickup article').flatHeights();
                 <!-- ↓↓更新履歴ここから↓↓ -->
                 <a href="performance/index.html">
                     <article>
-                        <time><span>2017</span>11.19</time>
+                        <time><span>2017</span>11.26</time>
                         <h2>競技プログラミング大会成績</h2>
-                        <p>11/18 に行われた AtCoder Beginner Contest 079 の参加成績を公表しました</p>
+                        <p>11/25 に行われた CODE FESTIVAL 2017 Final (Parallel) の参加成績を公表しました</p>
                     </article>
                 </a>
                 <!-- ↑↑更新履歴ここまで↑↑ -->
